--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -19,28 +19,36 @@
 
 <ion-content padding>
 	<ion-list class="full-dividers-list">
-        <ion-card class="card" *ngFor="let vehicle of testReport.vehicles">		
+        <ion-card class="card" *ngFor="let vehicle of testReport.vehicles">
             <ion-item class="ion-item-title">
                 <h2>{{ vehicle.registration }}</h2>
                 <p>{{ vehicle.type }}</p>
             </ion-item>
             <ion-list class="full-dividers-list">
-                <button ion-item
-                        *ngFor="let vehicleTest of vehicle.vehicleTests"
-                        (click)="openTest(vehicle, vehicleTest)">
-                    <h3 class="test-type">{{ vehicleTest.name }}</h3>
-                    <h3 item-end class="test-type-status"
-                        *ngIf="vehicleTest.hasPassed != null"
-                        [ngClass]="vehicleTest.hasPassed ? 'test-type-pass' : 'test-type-fail'">
-                        {{ vehicleTest.hasPassed ? 'Pass' : 'Fail' }}
-                      <span *ngIf="vehicleTest.defects.length != 0">
-                        - {{ vehicleTest.defects.length }} defects
-                      </span>
-                    </h3>
-                    <h3 item-end class="test-type-status test-type-notcomplete" *ngIf="vehicleTest.hasPassed == null">Not complete</h3>
-                </button>
+              <ion-item-sliding *ngFor="let vehicleTest of vehicle.vehicleTests"
+                                #slidingItem>
+                  <button ion-item
+                          (click)="openTest(vehicle, vehicleTest)"
+                          class="bottom-divider">
+                      <h3 class="test-type">{{ vehicleTest.name }}</h3>
+                      <h3 item-end class="test-type-status"
+                          *ngIf="vehicleTest.hasPassed != null"
+                          [ngClass]="vehicleTest.hasPassed ? 'test-type-pass' : 'test-type-fail'">
+                          {{ vehicleTest.hasPassed ? 'Pass' : 'Fail' }}
+                        <span *ngIf="vehicleTest.defects.length != 0">
+                          - {{ vehicleTest.defects.length }} defects
+                        </span>
+                      </h3>
+                      <h3 item-end class="test-type-status test-type-notcomplete" *ngIf="vehicleTest.hasPassed == null">Not complete</h3>
+                  </button>
+                  <ion-item-options>
+                    <button ion-button
+                            color="danger"
+                            (click)="onRemoveVehicleTest(vehicle, vehicleTest, slidingItem)">Remove</button>
+                  </ion-item-options>
+              </ion-item-sliding>
             </ion-list>
-                
+
             <button class="btn-add-test" ion-item detail-none (click)="addVehicleTest(vehicle)" [ngClass]="{'bottom-divider': vehicle.vehicleTests.length == 0}">
                 <span *ngIf="vehicle.vehicleTests.length == 0">Add a test type</span>
                 <span *ngIf="vehicle.vehicleTests.length != 0">Add a linked test</span>
