--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -11,7 +11,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content no-padding class="content-background-color-grey">
+<ion-content no-padding>
   <ion-list text-wrap>
 
     <ion-item-group>
