--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -90,6 +90,7 @@
             <button ion-button (click)="addATFIssue()">
                 ATF Issue
             </button>
+            <button ion-button (click)="onCancel()">Cancel</button>
         </ion-buttons>
     </ion-toolbar>
 </ion-footer>
